--- a/static/main.css
+++ b/static/main.css
@@ -36,7 +36,7 @@ button {
 }
 
 table {
-    border-collapse: collapse; /* Сливаем границы ячеек */
-    width: 50%; /* Устанавливаем ширину таблицы */
-    margin: 0 auto; /* Центрируем таблицу */
+    border-collapse: collapse;
+    width: 50%;
+    margin: 0 auto;
 }
